--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,6 +16,17 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 # Install PHP extensions
 RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd
 
+# Enable and configure OPcache for performance
+RUN docker-php-ext-enable opcache
+RUN { \
+    echo "opcache.memory_consumption=128"; \
+    echo "opcache.interned_strings_buffer=8"; \
+    echo "opcache.max_accelerated_files=10000"; \
+    echo "opcache.validate_timestamps=1"; \
+    echo "opcache.revalidate_freq=2"; \
+    echo "opcache.save_comments=1"; \
+} > /usr/local/etc/php/conf.d/opcache-recommended.ini
+
 # Get latest Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
@@ -36,6 +47,8 @@ COPY --chown=user:user . /var/www
 # Change current user to user
 USER user
 
-# Expose port 8000 and start php-fpm server
-EXPOSE 8000
-CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=8000"]
+# Expose port 9000 for php-fpm
+EXPOSE 9000
+# Run php-fpm (faster/more production-like than artisan serve). For local
+# dev we still rely on the forwarded port 8000 from compose.
+CMD ["php-fpm"]
