--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,9 +44,13 @@ services:
     restart: unless-stopped
     working_dir: /var/www
     volumes:
-      - ./backend:/var/www
+      # On Windows bind mounts can be slow. Keep app source mounted but
+      # store composer/vendor in a named volume to avoid heavy sync overhead.
+      - ./backend:/var/www:cached
+      - backend_vendor:/var/www/vendor
+    # php-fpm listens on 9000 inside container; we'll expose via nginx proxy
     ports:
-      - "8000:8000"
+      - "9000"
     depends_on:
       - mysql
     networks:
@@ -56,6 +60,20 @@ services:
       - DB_DATABASE=autotablica
       - DB_USERNAME=laravel_user
       - DB_PASSWORD=laravel_password
+
+  backend_proxy:
+    image: nginx:stable-alpine
+    container_name: autotablica_backend_proxy
+    restart: unless-stopped
+    ports:
+      - "8000:80"
+    volumes:
+      - ./backend:/var/www:ro,cached
+      - ./backend/docker/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - backend
+    networks:
+      - autotablica_network
 
   # React Frontend
   frontend:
@@ -82,6 +100,7 @@ services:
 
 volumes:
   mysql_data:
+  backend_vendor:
 
 networks:
   autotablica_network:
