--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,7 @@ services:
     networks:
       - autotablica_network
     environment:
+      - DB_CONNECTION=mysql
       - DB_HOST=mysql
       - DB_DATABASE=autotablica
       - DB_USERNAME=laravel_user
