--- a/backend/.env.example
+++ b/backend/.env.example
@@ -63,3 +63,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+HISTORIA_POJAZDU_BASE_URL=https://moj.gov.pl
+HISTORIA_POJAZDU_APP_NAME=HistoriaPojazdu
+HISTORIA_POJAZDU_API_VERSION=1.0.17
+HISTORIA_POJAZDU_TIMEOUT=15
