--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "@types/react-dom": "^19.2.1",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
+    "chart.js": "^4.5.1",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
-  "react-router-dom": "^6.14.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
